Fix last layout issues on homepage with Poppy

--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,27 @@ body {
   margin: auto;
 }
 
+.tagline {
+  display: flex;
+  justify-content: center;
+}
+
+.tagline h2 {
+  margin-top: 0;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
 .text-box h3 {
-  
+  margin-bottom: 4px;
+}
+
+.text-box p {
+  margin-top: 0;
+}
+
+.text-box p:first-child {
+  margin-top: revert;
 }
 
 .new-game-bag {
